fix scrollbar height

--- a/src/styles/common/utils.scss
+++ b/src/styles/common/utils.scss
@@ -11,6 +11,7 @@
 
     &::-webkit-scrollbar {
       width: $width;
+      height: $width;
     }
 
     &::-webkit-scrollbar-thumb {
